--- a/fr.n7.model.conversion/.project
+++ b/fr.n7.model.conversion/.project
@@ -26,4 +26,15 @@
 			<location>/media/basile/DATA/Cours/IDM/idm-mini-projet/fr.n7.simplePDL/src</location>
 		</link>
 	</linkedResources>
+	<filteredResources>
+		<filter>
+			<id>1633440125247</id>
+			<name></name>
+			<type>30</type>
+			<matcher>
+				<id>org.eclipse.core.resources.regexFilterMatcher</id>
+				<arguments>node_modules|.git|__CREATED_BY_JAVA_LANGUAGE_SERVER__</arguments>
+			</matcher>
+		</filter>
+	</filteredResources>
 </projectDescription>
