--- a/fr.n7.simplePDL/build.properties
+++ b/fr.n7.simplePDL/build.properties
@@ -2,7 +2,7 @@
 
 bin.includes = .,\
                model/,\
-               META-INF/,\
+               src/META-INF/,\
                plugin.xml,\
                plugin.properties
 jars.compile.order = .
